infra/60-eks/app/05-gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: roboshop-aws-alb
spec:
  controllerName: gateway.k8s.aws/alb
